--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2260,9 +2260,10 @@ final_models <- list(Blauwborst = Blauwborst_distmod_2022_hn1,
                      GrauweGors = GrauweGors_distmod_2022_hn1,
                      GroeneSpecht = GroeneSpecht_distmod_2022_hn1,
                      Heggenmus = Heggenmus_distmod_2022_hn1,
-                     Holenduif = Holenduif_distmod_2022_hn1,
+                     Holenduif = Holenduif_distmod_2022_hr2,
                      Houtduif = Houtduif_distmod_2022_hn3,
                      Huismus = Huismus_distmod_2022_hn3,
+                     Kauw = Kauw_distmod_2022_hr1,
                      Kievit = Kievit_distmod_2022_hr1,
                      KleineKarekiet = KleineKarekiet_distmod_2022_hn1,
                      Kneu = Kneu_distmod_2022_hn1,
@@ -2271,6 +2272,7 @@ final_models <- list(Blauwborst = Blauwborst_distmod_2022_hn1,
                      Merel = Merel_distmod_2022_hr1,
                      Patrijs = Patrijs_distmod_2022_hn1,
                      Rietzanger = Rietzanger_distmod_2022_hn1,
+                     Roek = Roek_distmod_2022_hr1,
                      Spotvogel = Spotvogel_distmod_2022_hn1,
                      Spreeuw = Spreeuw_distmod_2022_hr1,
                      Tjiftjaf = Tjiftjaf_distmod_2022_hr2,
