--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2459,7 +2459,7 @@ for (naam in names(final_models_binned)) {
   
   titel <- paste(unlist(strsplit(naam, "(?<=[a-z])(?=[A-Z])", 
                                  perl = TRUE)), collapse = " ")
-  
+  par(mfrow = c(1, 1))
   plot(ds_model_2018_2022 , pdf = TRUE, showpoints = FALSE,
        main = paste(titel, f, sep = " - "))
   
